--- a/app/src/main/res/drawable/background_order.xml
+++ b/app/src/main/res/drawable/background_order.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#fef99f48"/>
+<solid android:color="#4ABFC3"/>
     <corners android:radius="@dimen/_45sdp"/>
 </shape>
