--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         app:layout_constraintStart_toEndOf="@+id/start_imgVegetable1"
         app:layout_constraintTop_toBottomOf="@+id/start_textView2" />
 
-    <Button
+        <TextView
         android:id="@+id/start_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_imgVegetable1"
-        android:text="Start here"
+        android:text="Start"
         android:paddingStart="@dimen/_40sdp"
         android:paddingEnd="@dimen/_40sdp"
         android:textSize="@dimen/_20sdp"
