--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -76,32 +76,40 @@
                     tools:layout_editor_absoluteX="19dp">
 
                     <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/lottieAnimationView2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+
+                        android:paddingEnd="@dimen/_60sdp"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:lottie_autoPlay="true"
-
                         app:lottie_loop="true"
-                        app:lottie_rawRes="@raw/shopping3"
-                        app:lottie_repeatMode="reverse">
-
-                    </com.airbnb.lottie.LottieAnimationView>
+                        app:lottie_rawRes="@raw/shopping2"
+                        app:lottie_repeatMode="reverse" />
 
                     <TextView
                         android:id="@+id/lottie_order"
                         android:layout_width="@dimen/_92ssp"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="40dp"
-                        android:layout_marginBottom="52dp"
-                        android:background="@drawable/background_order"
+                        android:background="@drawable/startbutton"
                         android:text="Order Now"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_15ssp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/lottie_container"
-                        app:layout_constraintEnd_toEndOf="@+id/lottie_container"
+                        android:padding="@dimen/_10sdp"
 
+
+                        app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.873"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.562"
                         tools:ignore="MissingConstraints" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -286,7 +294,8 @@
                             android:layout_gravity="center"
                             android:text="Support"
                             android:textAlignment="center"
-                            android:textSize="@dimen/_10sdp">
+                            android:textSize="@dimen/_10sdp"
+                            tools:ignore="TextSizeCheck">
 
                         </TextView>
 
