--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,17 +6,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/nestedScrollView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:fillViewport="true"
+            tools:ignore="MissingConstraints">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_25sdp">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/tvhi"
@@ -68,24 +70,25 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    app:layout_constraintHorizontal_weight="2"
                     android:id="@+id/lottie_container"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_100sdp"
                     android:layout_marginTop="@dimen/_2sdp"
+                    app:layout_constraintHorizontal_weight="2"
                     app:layout_constraintTop_toBottomOf="@id/search"
                     tools:layout_editor_absoluteX="19dp">
+
                     <TextView
                         android:id="@+id/lottie_order"
                         android:layout_width="@dimen/_92ssp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/startbutton"
+                        android:padding="@dimen/_10sdp"
                         android:text="Order Now"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_15ssp"
                         android:textStyle="bold"
-                        android:padding="@dimen/_10sdp"
 
 
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,6 +98,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.562"
                         tools:ignore="MissingConstraints" />
+
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/lottieAnimationView2"
                         android:layout_width="@dimen/_180sdp"
@@ -130,6 +134,7 @@
                     tools:ignore="MissingConstraints" />
 
                 <androidx.recyclerview.widget.RecyclerView
+
                     android:id="@+id/rc_category"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_120sdp"
@@ -157,21 +162,26 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rc_popular"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_120sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_height="@dimen/_210sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_9sdp"
+
                     app:layout_constraintStart_toStartOf="@id/tvCategorties"
                     app:layout_constraintTop_toBottomOf="@id/tvPopular"
                     tools:ignore="MissingConstraints" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.core.widget.NestedScrollView>
+
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/bottom_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_90sdp"
+
+            android:layout_height="@dimen/_80sdp"
+
             app:layout_constraintBottom_toBottomOf="parent">
 
             <com.google.android.material.bottomappbar.BottomAppBar
@@ -184,7 +194,7 @@
                 app:fabCradleRoundedCornerRadius="@dimen/_50sdp"
                 app:fabCradleVerticalOffset="@dimen/_15sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toLeftOf="@+id/lottieAnimationView2"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rc_popular"
                 tools:ignore="BottomAppBar,NotSibling">
@@ -253,19 +263,11 @@
                         </TextView>
                     </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:orientation="vertical">
-
-
-                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="2"
+                        android:layout_weight="1"
                         android:orientation="vertical">
 
 
@@ -335,28 +337,31 @@
 
             </com.google.android.material.bottomappbar.BottomAppBar>
 
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/order_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/teal_200"
-                android:elevation="@dimen/_14sdp"
                 android:src="@drawable/ic_cart"
-                app:elevation="@dimen/_15sdp"
-                app:layout_anchor="@id/appbar"
-                app:layout_anchorGravity="top|center"
 
+                app:layout_anchor="@+id/appbar"
+
+                app:layout_anchorGravity="top|center"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.526"
                 app:layout_constraintStart_toStartOf="parent"
-
                 app:layout_constraintTop_toBottomOf="@+id/rc_popular"
-
+                app:layout_constraintVertical_bias="0.75"
                 tools:ignore="MissingConstraints,NotSibling" />
+
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
