--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -57,6 +57,9 @@
 
                 <EditText
                     android:id="@+id/search"
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:maxLength="200"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_15sdp"
