--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -28,13 +28,14 @@
             </ImageView>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/txt_nameProduct"
+                android:layout_width="@dimen/_140sdp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:text="Name food"
                 android:textColor="@color/purple_200"
-                android:textSize="@dimen/_15ssp"
-                android:textStyle="bold"
+                android:textSize="@dimen/_14sdp"
+
 
                 app:layout_constraintStart_toEndOf="@+id/image_cart"
                 app:layout_constraintTop_toTopOf="parent">
@@ -42,14 +43,16 @@
             </TextView>
 
             <TextView
+                android:id="@+id/txt_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:paddingEnd="@dimen/_1sdp"
                 android:text="10000 VND"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                android:textStyle="bold"
+                android:textSize="@dimen/_10ssp"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -59,61 +62,68 @@
                 android:id="@+id/txt_price_sum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="64dp"
-                android:paddingEnd="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:paddingEnd="@dimen/_1sdp"
                 android:text="10000 VND"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_15ssp"
-                android:textStyle="bold"
+                android:textSize="@dimen/_10ssp"
+
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent">
 
             </TextView>
 
-            <ImageView
-                android:id="@+id/image_sub"
-                android:layout_width="38dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:src="@drawable/minus_check_box"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/image_cart">
-
-            </ImageView>
-
-            <TextView
-                android:id="@+id/txt_amount"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_7sdp"
-
-                android:layout_marginEnd="@dimen/_7sdp"
-                android:text="1"
-                android:textSize="@dimen/_20sdp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@+id/image_sub"
-                app:layout_constraintTop_toTopOf="@+id/image_sub">
-
-
-            </TextView>
-
-            <ImageView
-                android:id="@+id/image_plus"
-                android:layout_width="38dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:src="@drawable/add_box"
-
+                android:orientation="horizontal"
+                app:layout_constraintStart_toEndOf="@+id/image_cart"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/txt_amount">
+                android:layout_marginBottom="@dimen/_2sdp">
 
-            </ImageView>
+                <ImageView
+                    android:id="@+id/image_sub"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/minus_check_box"
+                    >
+
+                </ImageView>
+
+                <EditText
+                    android:id="@+id/txt_amount"
+                    android:layout_width="@dimen/_55sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_2sdp"
+                    android:layout_marginEnd="@dimen/_2sdp"
+                    android:layout_weight="1"
+                    android:background="@drawable/grey_background_edittext"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toEndOf="@+id/image_sub"
+                    app:layout_constraintTop_toTopOf="@+id/image_sub">
+
+
+                </EditText>
+
+                <ImageView
+                    android:id="@+id/image_plus"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:src="@drawable/add_box"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/txt_amount">
+
+                </ImageView>
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
