--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_5sdp"
-        android:text="@{categoryName.category}"
+        android:text="@{categoryName.name}"
         android:textAlignment="center"
         android:textColor="@color/teal_200"
         android:textSize="@dimen/_15sdp"
