--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
 
-            android:text="@{category.category}"
+            android:text="@{category.name}"
             android:textSize="@dimen/_15sdp"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/img_cate"
